{
    "name": "BasicControls",
    "maps": [
        {
            "name": "DefaultCameraControls",
            "id": "6c15a227-4917-4a6c-b9c3-fa525dbea50a",
            "actions": [
                {
                    "name": "MoveCamera",
                    "type": "PassThrough",
                    "id": "1c4af8b9-292a-46d1-8c30-d50ae842c17f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseClickMain",
                    "type": "Button",
                    "id": "5cb4f464-72c1-46c6-b163-3b8d10967a18",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "PassThrough",
                    "id": "de52081b-7d02-4f2b-8855-907374378b65",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseScroll",
                    "type": "PassThrough",
                    "id": "3b9c973e-c86f-4ec9-8354-d64edf763762",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "4554e0bc-c354-481e-a65e-2f76f8252c41",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCamera",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "081894c7-0898-4da9-801c-2a1637e2131a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "PCSontrolScheme",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "c1e3f6e1-7b57-428f-b44e-65efa385650d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "PCSontrolScheme",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a1993e9e-abce-42c6-b48d-66233f29b854",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "PCSontrolScheme",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "3b94f5b0-bf2a-4b2a-a3f9-ecd22431401f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "PCSontrolScheme",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "325c3031-25e5-4b8c-ad35-3b2db8c45dfd",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "PCSontrolScheme",
                    "action": "MouseClickMain",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5d2b6915-63d7-4553-960f-7ada07118330",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "PCSontrolScheme",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "ScrollWheel",
                    "id": "db1c5719-5b97-44b3-8322-ee87b1e06031",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseScroll",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "3078bcd4-c66e-4342-ac7b-10338624f2b2",
                    "path": "<Mouse>/scroll/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "PCSontrolScheme",
                    "action": "MouseScroll",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "c5e8c102-cbe5-4eb4-86e5-d478e5d4a9ec",
                    "path": "<Mouse>/scroll/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "PCSontrolScheme",
                    "action": "MouseScroll",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "CommandControls",
            "id": "1b438e87-236c-4f78-b121-1b20e2aa0005",
            "actions": [
                {
                    "name": "PointerPosition",
                    "type": "PassThrough",
                    "id": "cdefef12-0685-4b34-8ada-19703a682e2d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MainPointerDrag",
                    "type": "PassThrough",
                    "id": "d333848d-5288-4ca9-bbc2-9da7e9342577",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "a4030e0c-72f9-4896-a927-c93093245534",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SendCommand",
                    "type": "Button",
                    "id": "c8d34856-ca60-40a3-9376-f70378d1f922",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Increase/Decrease",
                    "type": "Value",
                    "id": "1327fbc2-8b7b-4155-92e0-61a5163c2f63",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "62935892-83c8-4314-9ad1-9107a36037e1",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "PCSontrolScheme",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "PointerDrag",
                    "id": "1595b408-bb70-44c9-9d0f-dd8bedd9cef1",
                    "path": "MouseDrag",
                    "interactions": "MouseDrag",
                    "processors": "",
                    "groups": "",
                    "action": "MainPointerDrag",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Button",
                    "id": "0c28d0a3-e1af-4ab7-a2cd-33d27ae759e3",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "PCSontrolScheme",
                    "action": "MainPointerDrag",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Axis1",
                    "id": "551ac77e-c273-43a4-8345-4f26e8ce887d",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "PCSontrolScheme",
                    "action": "MainPointerDrag",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Axis2",
                    "id": "360ebea4-2072-4feb-bef4-2fd1d9ec2a72",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "PCSontrolScheme",
                    "action": "MainPointerDrag",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a0af7afd-b62a-4d82-b736-eea2e11683ee",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "PCSontrolScheme",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "05ee420e-927f-4ca9-9b9f-f37b4fe9c94d",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "PCSontrolScheme",
                    "action": "SendCommand",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "ByKeyboard",
                    "id": "5a536443-66fb-4f3e-b677-5a308c1fb15d",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Increase/Decrease",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "47e72c56-4d50-49b9-8a1a-4199401358bc",
                    "path": "<Keyboard>/minus",
                    "interactions": "",
                    "processors": "",
                    "groups": "PCSontrolScheme",
                    "action": "Increase/Decrease",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "7838d886-02a4-4b73-89fa-2f3f7713f5b5",
                    "path": "<Keyboard>/#(+)",
                    "interactions": "",
                    "processors": "",
                    "groups": "PCSontrolScheme",
                    "action": "Increase/Decrease",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PCSontrolScheme",
            "bindingGroup": "PCSontrolScheme",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}